# course-app

./: Makefile  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: workflow.yml
inference_service/app/config/: .env
module1/src/config/: .env  logger.py
module1/src/db/: db.sqlite
module1/src/model/: model_service.py
module1/src/model/models/: rf_db_v2
module1/src/model/pipeline/: collection.py  preparation.py
