[project]
name = "module1"
version = "0.1.0"
description = ""
authors = [
    {name = "Vaclav Svoboda",email = "svobvacl@amazon.lu"}
]
readme = "README.md"
requires-python =  ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "wemake-python-styleguide (>=1.0.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
